src/test/ui/block-result/issue-13624.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13624.rs:17:5
   |
17 |     Enum::EnumStructVariant { x: 1, y: 2, z: 3 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found enum `a::Enum`
   |
   = note: expected type `()`
              found type `a::Enum`

error[E0308]: mismatched types
  --> $DIR/issue-13624.rs:32:9
   |
32 |         a::Enum::EnumStructVariant { x, y, z } => {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected (), found enum `a::Enum`
   |
   = note: expected type `()`
              found type `a::Enum`

error: aborting due to previous error(s)

